Add domain authorizations none

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -4,6 +4,7 @@ en:
       authorizations: Authorizations
     user:
       authorizations:
+        none: You have no active authorizations.
         resource: Resource
         products: Products
         domains: Domains
